GNOME Bugzilla – Bug 736266
wavparse: error in reading adtl chunk
Last modified: 2014-09-13 13:50:18 UTC
Created attachment 285648 [details] A standard 16-bit stereo WAVE file The attached file cannot be read, i.e. gst-launch-1.0 --gst-debug=wavparse:5 filesrc location=files/stereol.wav ! wavparse ! filesink location=q.raw does not produce any output. File courtesy of http://www-mmsp.ece.mcgill.ca/Documents/AudioFormats/WAVE/Samples.html.
Created attachment 285649 [details] [review] wavparse: fix reading of adtl chunk The patch looks good to me and fixes this file. That means it produces the same output as sox. But I don't have further files with adtl chunks.
The parsing of the adtl chunks was more broken then that, your patch fixed skipping of them though ;) commit a9d7c1d95e2e2182a7a91530ae0d85aed2972d8f Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Sep 12 15:06:50 2014 +0300 wavparse: Fix parsing of adtl chunks We have to skip 12 bytes of data for the chunk, and the data size passed to the sub-chunk parsing functions should have 4 bytes less than the data size. Also when parsing the sub-chunks, check if we actually have enough data to read instead of just crashing. https://bugzilla.gnome.org/show_bug.cgi?id=736266